src/tests/snapshots/swayward__tests__window_opening__check_fullscreen_maximize@fsF-tmT-wfsBU-wmAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nwant maximized: AU\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized-to-edges true\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Maximized]

post-map configures:
size: 1280 × 720, bounds: 1280 × 720, states: []
size: 1280 × 720, bounds: 1280 × 720, states: [Activated]
